@@ -100,6 +100,7 @@
                     "socket": null,
                     "url": {
                         "hash": null,
+                        "full": null,
                         "hostname": null,
                         "pathname": null,
                         "port": null,
